<resources>
    <string name="app_name">ImagIA</string>
    <string name="bottom_ullada">Ullada</string>
    <string name="bottom_historial">Historial</string>
    <string name="bottom_compte">Compte</string>
    <string name="obre_la_camera">Fes una foto</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="nickname">Nickname</string>
    <string name="tlf">Telephone</string>
    <string name="crear_usuari">Crear Usuari</string>
    <string name="validar">Validar usuari</string>
    <string name="resposta_server">Respuesta del servidor</string>
    <string name="data">Fecha</string>
    <string name="carregant">Carregant...</string>
</resources>