<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ullada">

    <fragment
        android:id="@+id/navigation_ullada"
        android:name="com.project.imagia.ui.ullada.UlladaFragment"
        android:label="@string/bottom_ullada"
        tools:layout="@layout/fragment_ullada" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.project.imagia.ui.history.HistoryFragment"
        android:label="@string/bottom_historial"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.project.imagia.ui.account.AccountFragment"
        android:label="@string/bottom_compte"
        tools:layout="@layout/fragment_account" />
</navigation>